[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-python"
version = "0.1.5"
description = "Official Shield SDK for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://getshield.dev"
Documentation = "https://docs.getshield.dev"
